fixed some other stuff